[tool.poetry]
name = "seldom"
version = "3.13.0"
description = "Seldom automation testing framework based on unittest."
authors = ["bugmaster <fnngj@126.com>"]
license = "Apache-2.0"
readme = "README.md"

homepage = "https://seldomqa.github.io"
repository = "https://github.com/SeldomQA/seldom"
documentation = "https://seldomqa.github.io"

keywords = ["sedom", "selenium", "appium", "requests"]

classifiers = [
    'Intended Audience :: Developers',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Software Development :: Testing',
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
appium-python-client = "^5.1.0"
xtestrunner = ">=1.8.5"
loguru = "~0.7.0"
openpyxl = "^3.0.3"
pyyaml = "^6.0"
jsonschema = "^4.10.0"
jmespath = "^0.10.0"
pymysql = "^1.0.0"
genson = "~1.2.2"
typer = "^0.16.0"
python-dateutil = "~2.8.2"
pycryptodome = "^3.21.0"

[tool.poetry.scripts]
seldom = "seldom.cli:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
