[project]
name = "seldom"
version = "3.14.1"
description = "Seldom automation testing framework based on unittest."
authors = [{ name = "bugmaster", email = "fnngj@126.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = ["seldom", "selenium", "appium", "requests"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "appium-python-client>=5.1.0,<6.0.0",
    "xtestrunner>=1.8.5",
    "loguru~=0.7.0",
    "openpyxl>=3.0.3,<4.0.0",
    "pyyaml>=6.0,<7.0",
    "jsonschema>=4.10.0,<5.0.0",
    "jmespath>=0.10.0,<1.0.0",
    "pymysql>=1.0.0,<2.0.0",
    "genson~=1.2.2",
    "typer>=0.16.0,<1.0.0",
    "python-dateutil~=2.8.2",
    "pycryptodome>=3.21.0,<4.0.0"
]

[project.urls]
Homepage = "https://seldomqa.github.io"
Repository = "https://github.com/SeldomQA/seldom"
Documentation = "https://seldomqa.github.io"

[project.scripts]
seldom = "seldom.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
